# spreadsheet-agent

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: git-conventions.mdc  pytest-rules.mdc  python-style.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
scripts/: run_download_sp500_10k.py  run_import_spreadsheets_to_sqlite.py
src/spreadsheet_agent/: __init__.py
